# netrias_client

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  architecture.md  backend_design.md  bdf.yml  client_contract.md  commercialization.md  compliance-config.json  debug_harmonize_block.txt  old_block.txt  plan.md  pyproject.toml  suggest_CDE.ipynb  test_plan.md  vulture_whitelist.py
.github/workflows/: ci.yml
adr/: ADR_001.md  ADR_002.md  ADR_003.md
docs/: requesting-API-key.md
examples/: mytest_harmonize.py
examples/data/: demo_overlap.csv
live_test/: test.py
raw_test_files/: sampled_2019-07-25-clin.csv
src/netrias_client/: __init__.py  _adapter.py  _client.py  _config.py  _core.py  _data_model_store.py  _discovery.py  _gateway_bypass.py  _http.py  _logging.py  _models.py  _sfn_discovery.py  _tabular.py  _validators.py  associate_api_key.py  overlap_report.py  scripts.py
src/netrias_client/live_test/: _constants.py  api_quicktest.py  test.py
src/netrias_client/live_test/data/: generated_manifest.json  primary_diagnosis_1.csv
src/netrias_client/tests/: __init__.py  _utils.py  conftest.py  test_adapter.py  test_associate_api_key.py  test_configuration.py  test_data_model_store.py  test_discovery.py  test_harmonize.py  test_models.py  test_overlap_report.py  test_tabular.py  test_validation.py
src/netrias_client/tests/fixtures/: data_overlap.csv  duplicate_headers.tsv  empty_middle.csv  recommend_synthetic_3col.json  recommend_synthetic_4col_harmonization.json  sample.tsv  sample_manifest.json  synthetic_3col.csv  synthetic_4col_harmonization.csv
tests/: mytest_harmonize.py
